Update French localization files and improve documentation

--- a/doc/locale/fr/LC_MESSAGES/api/index.po
+++ b/doc/locale/fr/LC_MESSAGES/api/index.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-20 11:10+0200\n"
+"POT-Creation-Date: 2025-08-21 15:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -25,7 +25,7 @@ msgstr "Fonctionnalités publiques :"
 msgid "API"
 msgstr "API"
 
-msgid "The public Application Programming Interface (API) of Sigima offers a set of functions that can be used     to access the DataLab computational backend. This API is designed to be simple and effective, allowing users to perform signal and image processing tasks with ease."
+msgid "The public Application Programming Interface (API) of Sigima offers a set of functions that can be used to access the DataLab computational backend. This API is designed to be simple and effective, allowing users to perform signal and image processing tasks with ease."
 msgstr "L'interface de programmation d'application (API) publique de Sigima offre un ensemble de fonctions qui peuvent être utilisées pour accéder au backend de calcul DataLab. Cette API est conçue pour être simple et efficace, permettant aux utilisateurs d'effectuer facilement des tâches de traitement de signaux et d'images."
 
 msgid "Submodule"
@@ -49,11 +49,11 @@ msgstr "Ensembles de paramètres pour configurer les fonctions de calcul (ces pa
 msgid ":mod:`sigima.objects`"
 msgstr ""
 
-msgid "Object model for signals and images (:class:`sigima.objects.SignalObj` and :class:`sigima.objects.ImageObj`) and related functions"
-msgstr "Modèle d'objet pour les signaux et les images (:class:`sigima.objects.SignalObj` et :class:`sigima.objects.ImageObj`) et fonctions associées"
+msgid "Object model for signals and images (:class:`sigima.objects.SignalObj` and :class:`sigima.objects.ImageObj`), scalar results (:class:`sigima.objects.GeometryResult` and :class:`sigima.objects.TableResult`), and related functions"
+msgstr "Modèle d'objet pour les signaux et les images (:class:`sigima.objects.SignalObj` et :class:`sigima.objects.ImageObj`), résultats scalaires (:class:`sigima.objects.GeometryResult` et :class:`sigima.objects.TableResult`), et fonctions associées"
 
 msgid ":mod:`sigima.proc`"
 msgstr ""
 
-msgid "Computation functions, which operate on signal and image objects (:class:`sigima.objects.SignalObj` or :class:`sigima.objects.ImageObj`)"
-msgstr "Fonctions de calcul, qui opèrent sur des objets signal et image (:class:`sigima.objects.SignalObj` ou :class:`sigima.objects.ImageObj`)"
+msgid "Computation functions, which operate on signal and image objects (:class:`sigima.objects.SignalObj` or :class:`sigima.objects.ImageObj`) and return signal or image objects, or scalar results (:class:`sigima.objects.GeometryResult` or :class:`sigima.objects.TableResult`)."
+msgstr "Fonctions de calcul, qui opèrent sur des objets signal et image (:class:`sigima.objects.SignalObj` ou :class:`sigima.objects.ImageObj`) et retournent des objets signal ou image, ou des résultats scalaires (:class:`sigima.objects.GeometryResult` ou :class:`sigima.objects.TableResult`)."
