--- a/doc/locale/fr/LC_MESSAGES/api/params.po
+++ b/doc/locale/fr/LC_MESSAGES/api/params.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Sigima \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-08-09 15:59+0200\n"
+"POT-Creation-Date: 2025-08-21 15:49+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -1041,7 +1041,7 @@ msgstr ""
 msgid "Default: '{base}({r},{c})'."
 msgstr ""
 
-msgid "Single choice from: Direction.INCREASING, Direction.DECREASING. Default: Direction.INCREASING."
+msgid "Single choice from: 'INCREASING', 'DECREASING'. Default: 'INCREASING'."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`ROIGridParam` with the fields set to the given values."
@@ -1107,9 +1107,6 @@ msgstr ""
 msgid "Resize parameters"
 msgstr ""
 
-msgid "Default: None."
-msgstr ""
-
 msgid "Single choice from: 'constant', 'nearest', 'reflect', 'wrap'. Default: 'constant'."
 msgstr ""
 
@@ -1128,7 +1125,7 @@ msgstr ""
 msgid "Rotate parameters"
 msgstr ""
 
-msgid "Angle (°)\\.  Default: None."
+msgid "Angle (°)\\.  Default: 0.0."
 msgstr ""
 
 msgid "Reshape the output array so that the input array is contained completely in the output\\. Default: False."
@@ -1138,6 +1135,22 @@ msgid "Returns a new instance of :py:class:`RotateParam` with the fields set to 
 msgstr ""
 
 msgid "New instance of :py:class:`RotateParam`."
+msgstr ""
+
+#, fuzzy
+msgid "Translate parameters"
+msgstr "Introduction aux paramètres `DataSet`"
+
+msgid "X translation\\.  Default: 0.0."
+msgstr ""
+
+msgid "Y translation\\.  Default: 0.0."
+msgstr ""
+
+msgid "Returns a new instance of :py:class:`TranslateParam` with the fields set to the given values."
+msgstr ""
+
+msgid "New instance of :py:class:`TranslateParam`."
 msgstr ""
 
 msgid "Mathematical operation parameters"
@@ -1156,6 +1169,9 @@ msgid "New instance of :py:class:`DataTypeIParam`."
 msgstr ""
 
 msgid "Log10 parameters"
+msgstr ""
+
+msgid "Default: None."
 msgstr ""
 
 msgid "Returns a new instance of :py:class:`LogP1Param` with the fields set to the given values."
