--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version:  sigima\n"
 "Report-Msgid-Bugs-To: p.raybaut@codra.fr\n"
-"POT-Creation-Date: 2025-08-21 15:50+0200\n"
+"POT-Creation-Date: 2025-08-30 20:33+0200\n"
 "PO-Revision-Date: 2025-05-22 15:46+0200\n"
 "Last-Translator: Christophe Debonnel <c.debonnel@codra.fr>\n"
 "Language: fr\n"
@@ -22,38 +22,26 @@ msgstr "Si vrai, les opérations FFT appliqueront un décalage de la composante 
 
 msgid ""
 "List of supported image I/O formats. Each format is a tuple of\n"
-"(file extension, description).\n"
+"``(file_extension, description)``.\n"
 "\n"
-".. note::\n"
+"The ``sigima`` library supports any image format that can be read by the ``imageio``\n"
+"library, provided that the associated plugin(s) are installed (see `imageio\n"
+"documentation <https://imageio.readthedocs.io/en/stable/formats/index.html>`_)\n"
+"and that the output NumPy array data type and shape are supported by ``sigima``.\n"
 "\n"
-"    The `sigima` library supports any image format that can be read by the `imageio`\n"
-"    library, provided that the associated plugin(s) are installed (see `imageio\n"
-"    documentation <https://imageio.readthedocs.io/en/stable/formats/index.html>`_)\n"
-"    and that the output NumPy array data type and shape are supported by `sigima`.\n"
-"\n"
-"    To add a new file format, you may use the `imageio_formats` option to specify\n"
-"    additional formats. Each entry should be a tuple of (file extension, description).\n"
-"\n"
-"    Example:\n"
-"\n"
-"    .. autodata:: sigima.config.IMAGEIO_FORMATS\n"
+"To add a new file format, you may use the ``imageio_formats`` option to specify\n"
+"additional formats. Each entry should be a tuple of (file extension, description).\n"
 msgstr ""
 "Liste des formats d'entrée/sortie d'images pris en charge. Chaque format est un tuple de\n"
 "(extension de fichier, description).\n"
 "\n"
-".. note::\n"
+"La bibliothèque ``sigima`` prend en charge tout format d'image qui peut être lu par la bibliothèque ``imageio``\n"
+"à condition que le(s) plugin(s) associé(s) soient installés (voir la documentation ``imageio\n"
+"<https://imageio.readthedocs.io/en/stable/formats/index.html>``)\n"
+"et que le type de données et la forme du tableau NumPy de sortie soient pris en charge par ``sigima``.\n"
 "\n"
-"    La bibliothèque `sigima` prend en charge tout format d'image qui peut être lu par la bibliothèque `imageio`,\n"
-"    à condition que le(s) plugin(s) associé(s) soient installés (voir la documentation `imageio <https://imageio.readthedocs.io/en/stable/formats/index.html>`_)\n"
-"    et que le type de données et la forme du tableau NumPy de sortie soient pris en charge par `sigima`.\n"
-"\n"
-"    Pour ajouter un nouveau format de fichier, vous pouvez utiliser l'option `imageio_formats` pour spécifier\n"
-"    des formats supplémentaires. Chaque entrée doit être un tuple de (extension de fichier, description).\n"
-"\n"
-"    Exemple :\n"
-"\n"
-"    \n"
-"    .. autodata:: sigima.config.IMAGEIO_FORMATS\n"
+"Pour ajouter un nouveau format de fichier, vous pouvez utiliser l'option ``imageio_formats`` pour spécifier\n"
+"des formats supplémentaires. Chaque entrée doit être un tuple de (extension de fichier, description).\n"
 
 msgid "All supported files"
 msgstr "Tous les fichiers pris en charge"
@@ -99,9 +87,6 @@ msgstr "Ecart-type de la distribution normale"
 
 msgid "Poisson distribution mean"
 msgstr "Moyenne de la distribution de Poisson"
-
-msgid "Properties"
-msgstr "Propriétés"
 
 msgid "This is a set of parameters defining a <b>Region of Interest</b> (ROI) in an image. The parameters can be used to create a ROI object or to extract data from an image using the ROI.<br><br>All values are expressed in physical coordinates (floats). The conversion to pixel coordinates is done by taking into account the image pixel size and origin.<br>"
 msgstr "Ceci est un ensemble de paramètres définissant une <b>Région d'Intérêt</b> (ROI) dans une image. Les paramètres peuvent être utilisés pour créer un objet ROI ou pour extraire des données d'une image en utilisant la ROI.<br><br>Toutes les valeurs sont exprimées en coordonnées physiques (flottantes). La conversion en coordonnées de pixels est effectuée en tenant compte de la taille des pixels et de l'origine de l'image.<br>"
@@ -813,6 +798,18 @@ msgstr "Fréquence centrale"
 msgid "Center frequency of the Gaussian filter"
 msgstr "Fréquence centrale du filtre gaussien"
 
+msgid "Inverse FFT result"
+msgstr "Résultat de la FFT inverse"
+
+msgid "Real part"
+msgstr "Partie réelle"
+
+msgid "Absolute value"
+msgstr "Valeur absolue"
+
+msgid "How to return the inverse FFT result"
+msgstr "Comment retourner le résultat de la FFT inverse"
+
 msgid "Padding strategy"
 msgstr "Stratégie de complément de zéros"
 
@@ -950,6 +947,9 @@ msgstr "Chebyshev de type 2"
 
 msgid "Elliptic"
 msgstr "Elliptique"
+
+msgid "Brickwall"
+msgstr "Filtre idéal"
 
 msgid "Filter method"
 msgstr "Méthode de filtrage"
@@ -1121,18 +1121,6 @@ msgstr "Contraste"
 
 msgid "X at min/max"
 msgstr ""
-
-msgid "Mean of the Gaussian distribution"
-msgstr "Moyenne de la distribution gaussienne"
-
-msgid "Standard deviation"
-msgstr "Ecart-type"
-
-msgid "Standard deviation of the Gaussian distribution"
-msgstr "Ecart-type de la distribution gaussienne"
-
-msgid "Seed for random number generator"
-msgstr "Graine du générateur de nombres aléatoires"
 
 msgid "Number"
 msgstr "Nombre"
