--- a/doc/locale/fr/LC_MESSAGES/contributing/environment.po
+++ b/doc/locale/fr/LC_MESSAGES/contributing/environment.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: DataLab \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-28 17:29+0200\n"
+"POT-Creation-Date: 2025-09-04 13:55+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: fr\n"
@@ -172,8 +172,8 @@ msgstr ""
 msgid "3.13.2.0"
 msgstr ""
 
-msgid "⚠ We strongly recommend using the `.dot` versions of WinPython which are lightweight and can be customized to your needs (using `pip install -r requirements-min.txt`)."
-msgstr "⚠ Nous recommandons fortement d'utiliser les versions `.dot` de WinPython qui sont légères et peuvent être personnalisées selon vos besoins (en utilisant `pip install -r requirements-min.txt`)."
+msgid "⚠ We strongly recommend using the `.dot` versions of WinPython which are lightweight and can be customized to your needs (using `pip install -r requirements.txt`)."
+msgstr "⚠ Nous recommandons fortement d'utiliser les versions `.dot` de WinPython qui sont légères et peuvent être personnalisées selon vos besoins (en utilisant `pip install -r requirements.txt`)."
 
 msgid "✅ We also recommend using a dedicated WinPython instance for Sigima."
 msgstr "✅ Nous recommandons également d'utiliser une instance WinPython dédiée pour Sigima."
