Fix translation for "Flat Top" in French localization

--- a/sigima/locale/fr/LC_MESSAGES/sigima.po
+++ b/sigima/locale/fr/LC_MESSAGES/sigima.po
@@ -49,6 +49,9 @@ msgstr "Cosinus"
 msgid "Exponential"
 msgstr "Exponentielle"
 
+msgid "Flat Top"
+msgstr "Flat Top"
+
 msgid "Gaussian"
 msgstr "Gaussienne"
 
